--- a/app/games/dilectus/page.module.css
+++ b/app/games/dilectus/page.module.css
@@ -4,10 +4,9 @@
     justify-content: center;
     align-items: center;
     margin-right: 12px;
-    margin-left: -230px;
+    margin-left: -242px;
+    margin-top: 18px;
     gap: 18px;
-    height: 100%;
-    margin-top: 100px;
 }
 
 .dilectus{
@@ -67,7 +66,7 @@
 @media (max-width: 870px) { 
     .wrap{
        flex-direction: column;
-       margin-top: 18px;
+       margin-right: 0px;
     }
     .style{
         flex-direction: row;
@@ -80,6 +79,7 @@
 @media (max-width: 600px) {
     .wrap{
         margin-left: 12px;
+        margin-right: 12px;
         margin-top: 18px;
     }
 }
